# newton-fractal

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
src/: fractal.ispc  main.cpp
